--- a/_data/links.yml
+++ b/_data/links.yml
@@ -5,8 +5,8 @@
   color: '#FC4672'
   
 - indice: 2
-  title: RESILIENCE OPEN CALL
-  url: https://silo.org.br/convocatorias
+  title: Leilões em andamento
+  url: https://leilao.benfeitoria.com/auctions
   color: '#FDB368'
   
   
