--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,22 +1,16 @@
 # Lista de links silo.org.br/links
 - indice: 1
-  title: Campanha Silo Escola
-  url: https://benfeitoria.com/siloescola
+  title: DOE | DONATE
+  url: https://silo.org.br/doe/
   color: '#FC4672'
   
 - indice: 2
-  title: Leilões em andamento
-  url: https://leilao.benfeitoria.com/auctions
-  color: '#FDB368'
-  
-  
-- indice: 3
   title: Silo Site
   url: https://silo.org.br/
-  color: '#1896A5'
+  color: '#FDB368'
     
-- indice: 4
+- indice: 3
   title: Convocatória Assistente de Finanças
   url: https://silo.org.br/convocatoria-financeiro
-  color: '#456079'
+  color: '#1896A5'
   
