--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,15 +2,15 @@
 - indice: 1
   title: DOE | DONATE
   url: https://silo.org.br/doe/
-  color: '#FC4672'
+  color: 'black'
   
 - indice: 2
-  title: Silo Site
-  url: https://silo.org.br/
-  color: '#FDB368'
+  title: Residency Open Call
+  url: https://silo.org.br/resilience-2021-open-call/
+  color: 'black'
     
 - indice: 3
-  title: Convocatória Assistente de Finanças
-  url: https://silo.org.br/convocatoria-financeiro
-  color: '#1896A5'
+  title: Silo Site
+  url: https://silo.org.br/
+  color: 'black'
   
