--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,16 +1,30 @@
 # Lista de links silo.org.br/links
 - indice: 1
-  title: DOE | DONATE
-  url: https://silo.org.br/doe/
+  title: Resiliência: Residentes 2021
+  url: https://silo.org.br/resilience-2021-comecou/
   color: 'black'
-  
+    
 - indice: 2
-  title: Residency Open Call
-  url: https://silo.org.br/resilience-2021-open-call/
+  title: Como a arte pode influenciar a ciência?
+  url: https://www.youtube.com/watch?v=kaNujRPoruI&list=PL1H9MV88EWPrZVx0bEsAjGifapKLTXbe8&ab_channel=SiloArteeLatitudeRural
   color: 'black'
     
 - indice: 3
+  title: Instrumentos na arte e na ciência | Como mensurar a realidade?
+  url: https://www.youtube.com/watch?v=-eI0Xg0d5jA&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&ab_channel=SiloArteeLatitudeRural
+  color: 'black'
+
+- indice: 4
+  title: Ressonância vulcânica | La respuesta de la tierra
+  url: https://www.youtube.com/watch?v=H7U9gm9gw8E&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&index=3&ab_channel=SiloArteeLatitudeRural
+  color: 'black'  
+    
+- indice: 5
   title: Silo Site
   url: https://silo.org.br/
   color: 'black'
-  
+
+- indice: 6
+  title: DOE | DONATE
+  url: https://silo.org.br/doe/
+  color: 'black'  
