--- a/_data/links.yml
+++ b/_data/links.yml
@@ -10,7 +10,7 @@
   color: 'black'
     
 - indice: 3
-  title: Instrumentos na arte e na ciência | Como mensurar a realidade?
+  title: Instrumentos na arte e na ciência – Como mensurar a realidade?
   url: https://www.youtube.com/watch?v=-eI0Xg0d5jA&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&ab_channel=SiloArteeLatitudeRural
   color: 'black'
 
