--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,33 +1,13 @@
 # Lista de links silo.org.br/links
 - indice: 1
-  title: "Resiliência: Residentes 2021"
-  url: https://silo.org.br/resilience-2021-comecou/
+  title: "Convocatória | Curso Livre CaipiraTechLab 2021"
+  url: https://silo.org.br/caipiratechlab2021/
   color: 'black'
     
 - indice: 2
-  title: "Como a arte pode influenciar a ciência?"
-  url: https://www.youtube.com/watch?v=kaNujRPoruI&list=PL1H9MV88EWPrZVx0bEsAjGifapKLTXbe8&ab_channel=SiloArteeLatitudeRural
+  title: "Conversas abertas | Resiliência: Residência artística"
+  url: https://youtube.com/playlist?list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf
   color: 'black'
-    
-- indice: 3
-  title: "Instrumentos na arte e na ciência – Como mensurar a realidade?"
-  url: https://www.youtube.com/watch?v=-eI0Xg0d5jA&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&ab_channel=SiloArteeLatitudeRural
-  color: 'black'
-  
-- indice: 4
-  title: "Heterogeneidade da forma"
-  url: https://www.youtube.com/watch?v=a_DGTCGiLAI&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&index=2&ab_channel=SiloArteeLatitudeRural
-  color: 'black'  
-    
-- indice: 5
-  title: "A perpendicular é o alívio do esforço"
-  url: https://www.youtube.com/watch?v=H7U9gm9gw8E&list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf&index=3&ab_channel=SiloArteeLatitudeRural
-  color: 'black'  
-    
-- indice: 6
-  title: "Ressonância vulcânica – La respuesta de la tierra"
-  url: https://youtu.be/D2ROJyIrKwk
-  color: 'black'  
     
 - indice: 7
   title: "Silo Site"
