--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,12 +1,12 @@
 # Lista de links silo.org.br/links
 - indice: 1
-  title: "Convocatória | Curso Livre CaipiraTechLab 2021"
-  url: https://silo.org.br/caipiratechlab2021/
+  title: "Aula aberta | Novos mercados e compras coletivas"
+  url: https://youtu.be/TUUdtZSaH0c
   color: '#2a4d3c'
     
 - indice: 2
-  title: "Conversas abertas | Resiliência: Residência artística"
-  url: https://youtube.com/playlist?list=PL1H9MV88EWPrYD1GxabrayGla4klEWltf
+  title: "Aula aberta | Gestão e arranjos econômicos com a Coopan"
+  url: https://youtu.be/tMWFCSZywhA
   color: '#2a4d3c'
     
 - indice: 3
