--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
   twitter: "https://twitter.com/SiloLatitude"
   flickr: "https://www.flickr.com/photos/silolatitude"
   github: "https://github.com/associacaosilo"
-  youtube: ""
+  youtube: "https://www.youtube.com/channel/UCwB5vE50QX2eCVv-i795y6Q"
   vimeo: ""
   soundcloud: ""
   tumblr: ""
