--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   instagram: "https://www.instagram.com/silo.arte.e.latitude.rural"
   facebook: "https://www.facebook.com/silo.arte.latitude.rural"
   twitter: "https://twitter.com/SiloLatitude"
-  flickr: "https://www.flickr.com/photos/silolatitude"
+  flickr: ""
   github: "https://github.com/associacaosilo"
   youtube: "https://www.youtube.com/channel/UCwB5vE50QX2eCVv-i795y6Q"
   vimeo: ""
