--- a/_data/links.yml
+++ b/_data/links.yml
@@ -5,7 +5,7 @@
     
 - indice: 2
   title: "Feirinha da Agricultura Familiar da Silo"
-  url: https://www.facebook.com/silo.arte.latitude.rural/photos_albums
+  url: https://www.facebook.com/silo.arte.latitude.rural
     
 - indice: 3
   title: "Silo Site"
