--- a/_data/links.yml
+++ b/_data/links.yml
@@ -14,3 +14,7 @@
 - indice: 4
   title: "DOE | DONATE"
   url: https://silo.org.br/doe/
+
+- indice: 5
+  title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
+  url: https://www.iberbibliotecas.org/por/guia-como-montar-un-laboratorio-de-experimentacion-e-innovacion-en-una-biblioteca/
