--- a/_data/links.yml
+++ b/_data/links.yml
@@ -18,3 +18,11 @@
 - indice: 5
   title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
   url: https://www.iberbibliotecas.org/por/guia-como-montar-un-laboratorio-de-experimentacion-e-innovacion-en-una-biblioteca/
+
+- indice: 6
+  title: "Guia de Residências Artísticas na América Latina"
+  url: https://indd.adobe.com/view/bbd58199-4cdc-439a-99aa-cbf36e00cc4d
+
+- indice: 7
+  title: "Primeiro mapeamento de organizações independentes doadoras nas áreas de justiça social e desenvolvimento comunitário no Brasil"
+  url: https://www.redefilantropia.org.br/_files/ugd/c1667c_dab8124bb81a494e83e190562923f383.pdf
