Atualiza página de links

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,25 +8,33 @@
   url: https://www.youtube.com/live/SGsgTjcu1U4?feature=share
 
 - indice: 3
+  title: "Aula Aberta: Panorama da Agroecologia no Brasil"
+  url: https://www.youtube.com/watch?v=pwNs9BY7-Rk&t=125s
+
+- indice: 4
+  title: "Aula Aberta: Agrotóxicos na Teia da Vida? Conhecer para Cuidar"
+  url: https://www.youtube.com/watch?v=II2XX7WT_6M
+
+- indice: 5
   title: "Conheça mais sobre a Silo acessando o nosso YouTube"
   url: https://www.youtube.com/channel/UCwB5vE50QX2eCVv-i795y6Q
 
-- indice: 4
+- indice: 6
   title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
   url: https://www.iberbibliotecas.org/por/guia-como-montar-un-laboratorio-de-experimentacion-e-innovacion-en-una-biblioteca/
   
-- indice: 5
+- indice: 7
   title: "Guia de Residências Artísticas na América Latina"
   url: https://indd.adobe.com/view/bbd58199-4cdc-439a-99aa-cbf36e00cc4d
   
-- indice: 6
+- indice: 8
   title: "Feirinha da Agricultura Familiar da Silo"
   url: https://www.facebook.com/silo.arte.latitude.rural
   
-- indice: 7
+- indice: 9
   title: "DOE | DONATE"
   url: https://silo.org.br/doe/
 
-- indice: 8
+- indice: 10
   title: "Silo Site"
   url: https://silo.org.br/
