--- a/_data/links.yml
+++ b/_data/links.yml
@@ -16,8 +16,8 @@
   url: https://www.youtube.com/watch?v=II2XX7WT_6M
 
 - indice: 5
-  title: "Conheça mais sobre a Silo acessando o nosso YouTube"
-  url: https://www.youtube.com/channel/UCwB5vE50QX2eCVv-i795y6Q
+  title: "Flickr do Curso CaipiratechLAB 2023"
+  url: https://www.flickr.com/photos/196098481@N03/albums
 
 - indice: 6
   title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
