--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,37 +8,29 @@
   url: https://resilience.silo.org.br/publications/
 
 - indice: 3
-  title: "Aula Aberta CaipiratechLAB: Cadernetas Agroecológicas"
-  url: https://www.youtube.com/live/SGsgTjcu1U4?feature=share
+  title: "Playlist com todas as Aulas Abertas do CaipiratechLAB"
+  url: https://youtube.com/playlist?list=PL1H9MV88EWPrg1H4_W_Hj-jy5c5lnBBpL&si=EtzEPIrYv0hBJN-e
 
 - indice: 4
-  title: "Aula Aberta CaipiratechLAB: Panorama da Agroecologia no Brasil"
-  url: https://www.youtube.com/watch?v=pwNs9BY7-Rk&t=125s
-
-- indice: 5
-  title: "Aula Aberta CaipiratechLAB: Agrotóxicos na Teia da Vida? Conhecer para Cuidar"
-  url: https://www.youtube.com/watch?v=II2XX7WT_6M
-
-- indice: 6
   title: "Flickr do Curso CaipiratechLAB 2023"
   url: https://www.flickr.com/photos/196098481@N03/albums
   
-- indice: 7
+- indice: 5
   title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
   url: https://www.iberbibliotecas.org/por/guia-como-montar-un-laboratorio-de-experimentacion-e-innovacion-en-una-biblioteca/
   
-- indice: 8
+- indice: 6
   title: "Guia de Residências Artísticas na América Latina"
   url: https://indd.adobe.com/view/bbd58199-4cdc-439a-99aa-cbf36e00cc4d
   
-- indice: 9
+- indice: 7
   title: "Feirinha da Agricultura Familiar da Silo"
   url: https://www.facebook.com/silo.arte.latitude.rural
 
-- indice: 10
+- indice: 8
   title: "DOE | DONATE"
   url: https://silo.org.br/doe/
 
-- indice: 10
+- indice: 9
   title: "Silo Site"
   url: https://silo.org.br/
