--- a/_data/links.yml
+++ b/_data/links.yml
@@ -12,8 +12,8 @@
   url: https://youtube.com/playlist?list=PL1H9MV88EWPrg1H4_W_Hj-jy5c5lnBBpL&si=EtzEPIrYv0hBJN-e
 
 - indice: 4
-  title: "Flickr do Curso CaipiratechLAB 2023"
-  url: https://www.flickr.com/photos/196098481@N03/albums
+  title: "Vagas abertas na Silo"
+  url: https://silo.org.br/
   
 - indice: 5
   title: "Guia de como montar um Laboratório de Experimentação e Inovação em uma Biblioteca"
