Novas demandas Comunicação
Demandas realizadas: 1, 3, 4, 5, 6, 7, 8, 9, 13 e 14

# 1 - Atualizar os ícones das redes sociais no menu principal do Site: remover Twitter, inserir YouTube e LinkedIn.

# 3 - Alterar o rodapé do site: Remover: “Silo - Arte e Latitude Rural”, ícones de redes sociais e botão “doar”. Substituir por: imagem logo silo menor, Fale com a gente (e-mail), Caixa Postal e Imagem Licença Creative Commons

# 4 - Excluir o compartilhe com ícones do facebook e do twitter ao final das páginas do site (com exceção das notícias)

# 5 - Incluir nas notícias, o ícone do Linkedin ao final da página no Compartilhe e excluir o ícone do Twitter

# 6 - Retirar as fotos e descrição da Ana na página “Quem Somos”, tanto em português quanto em inglês

# 7 - Criar página “Biblioteca” e inserir no menu principal (substituir por “Doe”)

# 8 - Na página de Transparência, colocar certificados um ao lado do outro

# 9 - Retirar as fotos e descrição da Lila da página “Quem Somos”

# 13 - Incluir certificado de auditoria de 2023

# 14 - Na página Silo>CaipiratechLAB incluir após o título “Últimas atividades” o texto “Confira fotos dos últimos encontros aqui!”, com o aqui sendo um texto linkado ao Flickr.

--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,11 @@ defaults:
 social:
   instagram: "https://www.instagram.com/silo.arte.e.latitude.rural"
   facebook: "https://www.facebook.com/silo.arte.latitude.rural"
-  twitter: "https://twitter.com/SiloLatitude"
+  linkedin: "https://www.linkedin.com/company/silo-arte-e-latitude-rural/?originalSubdomain=br"
+  twitter: ""
   flickr: ""
   github: "https://github.com/associacaosilo"
-  youtube: "https://www.youtube.com/channel/UCwB5vE50QX2eCVv-i795y6Q"
+  youtube: "https://www.youtube.com/@SiloArteeLatitudeRural"
   vimeo: ""
   soundcloud: ""
   tumblr: ""
