adicionando espanhol a lista de linguas do config

--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,8 @@ prose:
               value: 'pt'
             - name: 'English'
               value: 'en'
+            - name: 'Español'
+              value: 'es'
       - name: "ref"
         field:
           element: "text"
