--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,8 +8,8 @@
   url: https://www.flickr.com/photos/encontrada/albums/
 
 - indice: 3
-  title: "Playlist com todas as Aulas Abertas do CaipiratechLAB" 
-  url: https://youtube.com/playlist?list=PL1H9MV88EWPrg1H4_W_Hj-jy5c5lnBBpL&si=EtzEPIrYv0hBJN-e
+  title: "Canal da Silo no YouTube" 
+  url: https://www.youtube.com/@SiloArteeLatitudeRural
 
 - indice: 4
   title: "Baixe todas as Publicações da Resiliência: Residência Artística"
