--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-# Site
 title: Silo
 subtitle: arte e latitude rural
 
@@ -6,25 +5,32 @@ subtitle: arte e latitude rural
 url: http://silo.org.br
 baseurl: ''
 permalink: :title/
-include: ['_pages']
 
-# Build settings
+include: 
+  - '_pages'
+  - 'media'
+
+keep_files:
+  - 'media/docs'
+  - 'media/images'
+
 markdown: kramdown
 port: 4666
 future: false
 
-# Collections
 collections:
   library:
     output: true
     permalink: /biblioteca/:title/
 
-# Plugins
 repository: associacaosilo/silo.org.br
 plugins:
   - jekyll-feed
+  - jekyll-github-metadata
+  - jekyll-relative-links
 
-# Defaults
+safe: true
+
 defaults:
   -
     scope:
@@ -38,8 +44,12 @@ defaults:
       type: "pages"
     values:
       layout: "post"
+  -
+    scope:
+      path: "media/docs"
+    values:
+      layout: null
 
-# Data
 social:
   instagram: "https://www.instagram.com/silo.arte.e.latitude.rural"
   facebook: "https://www.facebook.com/silo.arte.latitude.rural"
@@ -53,9 +63,9 @@ social:
   pinterest: ""
   linkedin: "https://www.linkedin.com/company/silo-arte-e-latitude-rural"
   envelope-o: "mailto:contato@silo.org.br"
+
 twitter_user: "SiloLatitude"
 
-# prose.io
 prose:
   media: 'media/images'
   ignore:
@@ -285,3 +295,4 @@ prose:
               value: 'pt'
             - name: 'English'
               value: 'en'
+
