feat: novo item linktre

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -34,3 +34,7 @@
 - indice: 9
   title: "Silo Site"
   url: https://silo.org.br/
+
+- indice: 10
+  title: "Inscrição - LabMARÉ | Chamada para Colaboradores"
+  link: "https://enketo.ona.io/x/Jx8aQOjf"
