--- a/_data/links.yml
+++ b/_data/links.yml
@@ -37,4 +37,4 @@
 
 - indice: 10
   title: "Inscrição - LabMARÉ | Chamada para Colaboradores"
-  link: "https://enketo.ona.io/x/Jx8aQOjf"
+  url: "https://enketo.ona.io/x/Jx8aQOjf"
