--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,7 +4,7 @@ public_folder: "/media/images/uploads"
 backend:
   name: github
   repo: associacaosilo/silo.org.br
-  branch: feat/cms-netlify
+  branch: stage
   commit_messages:
     create: Create {{collection}} “{{slug}}”
     update: Update {{collection}} “{{slug}}”
