--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,6 @@
 media_folder: "static/images/uploads"
 public_folder: "/media/images/uploads" 
+site_id: cms.netlify.com
 
 backend:
   name: github
