fix: media upload cms

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,4 +1,4 @@
-media_folder: "static/images/uploads"
+media_folder: "/media/images/uploads"
 public_folder: "/media/images/uploads" 
 
 backend:
@@ -47,8 +47,6 @@ collections:
           - {label: "English", value: "en"}
           - {label: "Español", value: "es"}
       - {label: "Referência para posts bilíngue", name: "ref", widget: "string", required: false, hint: "Ex: residencia-convocatoria-2017"}
-      - {label: "Prefixo para galeria de imagens", name: "swipebox", widget: "string", required: false, hint: "Ex: p1_"}
-      - {label: "Data de encerramento", name: "close", widget: "date", required: false, hint: "Para chamadas/convocatórias"}
       - {label: "Conteúdo", name: "body", widget: "markdown"}
 
   - name: "pages"
