feat: update links and fix name people

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4,6 +4,9 @@
 
 - title: "Seminário Diálogo e Participação Comunitária em Unidades de Conservação de Uso Sustentável: uma aliança em prol de uma governança interespécies"
   url: "https://silo.org.br/unidade-conservacao-uso-sustentavel/"
+
+- title: "INSCRIÇÕES PRORROGADAS LABMARÉ- Laboratório de Arquitetura, Cultura e Clima | CHAMADA PÚBLICA"
+  url: "https://www.redesdamare.org.br/media/downloads/arquivos/Chamada_Publica_LabCidade.pdf"
     
 - title: "Canal da Silo no YouTube" 
   url: https://www.youtube.com/@SiloArteeLatitudeRural
@@ -17,9 +20,6 @@
 - title: "Guia de Residências Artísticas na América Latina"
   url: https://indd.adobe.com/view/bbd58199-4cdc-439a-99aa-cbf36e00cc4d
   
-- title: "Feirinha da Agricultura Familiar da Silo"
-  url: https://www.facebook.com/silo.arte.latitude.rural
-
 - title: "DOE | DONATE"
   url: https://silo.org.br/doe/
 
