feat: novo link quantumfagia

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -5,6 +5,9 @@
 - title: "Silo Site"
   url: https://silo.org.br/
 
+- title: "QUANTUMFAGIA | Inscreva-se"
+  url: https://quantumfagia.midiatatica.net/imotiro.html
+
 - title: "Canal da Silo no YouTube" 
   url: https://www.youtube.com/@SiloArteeLatitudeRural
 
